// Copyright 2018 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// Stores calls to sandboxed_engine_request.mojom and
// sandboxed_cleaner_engine_request.mojom for later analysis.

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package chrome_cleaner;

message APICall {
  string file_name = 1;
  string function_name = 2;
  int64 microseconds_since_start = 3;
  map<string, string> parameters = 4;
}

message CallHistory {
  repeated APICall api_calls = 1;

  // This field corresponds to the hash of the git commit corresponding
  // to this build version.
  string build_version = 2;
}
